--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "coolname>=2.2.0",
     "fastapi>=0.116.1",
+    "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "passlib[bcrypt]>=1.7.4",
+    "pytest-asyncio>=1.1.0",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
@@ -23,3 +25,7 @@ dev = [
     "pytest>=8.4.1",
     "ruff>=0.12.3",
 ]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+python_files = ["test_basic_flow.py"]
