--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ dependencies = [
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "passlib[bcrypt]>=1.7.4",
+    "playwright>=1.53.0",
     "pytest-asyncio>=1.1.0",
+    "pytest-playwright>=0.7.0",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
@@ -21,6 +23,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "playwright>=1.53.0",
     "pytest-cov>=6.2.1",
     "pytest>=8.4.1",
     "ruff>=0.12.3",
