--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "qrcode[pil]>=8.2",
     "uvicorn[standard]>=0.35.0",
+    "websockets>=12.0",
 ]
 
 [dependency-groups]
