feat: implement structured logging and enhance ratings UI
- Add structured logging with structlog integration
- Create logging configuration module with JSON formatting
- Replace print statements with proper logging calls
- Add logs directory to .gitignore
- Enhance ratings summary with podium display and rankings
- Add QR code popup modal for better user experience
- Improve admin dashboard UI with better button styling
- Update CLAUDE.md with logging documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
     "qrcode[pil]>=8.2",
+    "structlog>=25.4.0",
     "uvicorn[standard]>=0.35.0",
     "websockets>=12.0",
 ]
