--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,22 @@
 # Environment Configuration for Memes Ranker
 
-# Admin dashboard password
-ADMIN_PASSWORD=your_secure_admin_password
-
-# JWT secret key for token generation
-JWT_SECRET_KEY=your_jwt_secret_key_here_should_be_long_and_random
-
-# Database configuration
-DATABASE_PATH=./data/memes.db
-
-# Memes directory
-MEMES_DIR=./static/memes
-
-# QR code URL (displayed to users)
-QR_CODE_URL=https://memes.bieda.it
-
-# Application settings
+# Application Configuration
 APP_HOST=0.0.0.0
 APP_PORT=8000
-APP_DEBUG=true
+APP_DEBUG=false
+
+# Database Configuration
+DATABASE_PATH=/app/data/memes.db
+
+# Security Configuration
+ADMIN_PASSWORD=your_secure_admin_password_here
+JWT_SECRET_KEY=your_very_secure_jwt_secret_key_here
+
+# Application URLs
+QR_CODE_URL=https://yourdomain.com
+
+# Gunicorn Configuration
+GUNICORN_WORKERS=4
+
+# Memes Directory
+MEMES_DIR=/app/static/memes
