feat: add automatic database initialization and improve admin UI
- Add init_db_prod.py for automatic database initialization in production
- Add docker-entrypoint.sh to handle database setup on container startup
- Update Dockerfile to use entrypoint script for automated setup
- Improve admin results button styling with consistent shadcn/ui classes
- Update .env.example with better organization and documentation
- Add comprehensive database management section to DEPLOYMENT.md
- Ensure automatic database creation with WAL mode and foreign key constraints

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,15 @@
-# Environment Configuration for Memes Ranker
-
-# Application Configuration
-APP_HOST=0.0.0.0
-APP_PORT=8000
-APP_DEBUG=false
-
-# Database Configuration
-DATABASE_PATH=/app/data/memes.db
-
-# Security Configuration
+# Security - CHANGE THESE IN PRODUCTION
 ADMIN_PASSWORD=your_secure_admin_password_here
 JWT_SECRET_KEY=your_very_secure_jwt_secret_key_here
 
-# Application URLs
+# Application Configuration
 QR_CODE_URL=https://yourdomain.com
-
-# Gunicorn Configuration
 GUNICORN_WORKERS=4
 
-# Memes Directory
-MEMES_DIR=/app/static/memes
+# Database (automatically created if not exists)
+DATABASE_PATH=/app/data/memes.db
+
+# Optional: Application Settings
+APP_HOST=0.0.0.0
+APP_PORT=8000
+APP_DEBUG=false
