--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ QR_CODE_URL=https://yourdomain.com
 GUNICORN_WORKERS=4
 
 # Database (automatically created if not exists)
+# In production: /app/data/memes.db (maps to ./data/memes.db on host)
 DATABASE_PATH=/app/data/memes.db
 
 # Optional: Application Settings
