feat: add pre-commit hook for automatic requirements.txt generation
- Add uv-export-requirements hook to pre-commit configuration
- Automatically export requirements.txt when pyproject.toml or uv.lock changes
- Update Dockerfile to use requirements.txt for better Docker layer caching
- Add requirements.txt to .dockerignore exceptions
- Generated initial requirements.txt with complete dependency tree

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,12 @@ repos:
     types_or: [ python, pyi ]
 - repo: local
   hooks:
+  - id: uv-export-requirements
+    name: export requirements.txt
+    entry: uv export --format requirements-txt --output-file requirements.txt
+    language: system
+    files: ^(pyproject\.toml|uv\.lock)$
+    pass_filenames: false
   - id: pytest
     name: run tests
     entry: uv run python -m pytest
