--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,7 +25,7 @@ repos:
   hooks:
   - id: uv-export-requirements
     name: export requirements.txt
-    entry: uv export --format requirements-txt --output-file requirements.txt
+    entry: uv export --format requirements-txt --no-dev --output-file requirements.txt
     language: system
     files: ^(pyproject\.toml|uv\.lock)$
     pass_filenames: false
