feat: add Docker multistage build with Tailwind CSS compilation
- Implement multistage Docker build with Node.js CSS compilation stage
- Add Tailwind CSS integration with custom configuration and build scripts
- Update nginx configuration for proper static file serving through proxy
- Fix admin results page SQL syntax errors and database transaction issues
- Add progress display and position naming (1st/2nd/3rd place) for results reveal
- Create simplified docker-compose.simple.yml for single-container deployment
- Update templates to use compiled CSS instead of CDN dependencies
- Add development build script and comprehensive Docker documentation

This eliminates CDN dependencies, improves performance, and provides
production-ready Docker deployment with load balancing support.

--- a/.dockerignore
+++ b/.dockerignore
@@ -50,3 +50,18 @@ docker-compose*.yml
 # Documentation
 README.md
 docs/
+
+# Tailwind CSS
+static/css/output.css
+
+# Development files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# NPM/Yarn
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
