--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,6 @@ dependencies = [
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "passlib[bcrypt]>=1.7.4",
-    "playwright>=1.53.0",
-    "pytest-asyncio>=1.1.0",
-    "pytest-playwright>=0.7.0",
     "python-dotenv>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
@@ -26,6 +23,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "aiohttp>=3.12.14",
+    "pytest-asyncio>=1.1.0",
+    "pytest-playwright>=0.7.0",
+
     "playwright>=1.53.0",
     "pytest-cov>=6.2.1",
     "pytest>=8.4.1",
