fix: resolve Docker volume mount permissions for database
- Add data-permissions init container to fix host volume ownership
- Enhance init_db_prod.py with directory write test and better error messages
- Create fix-permissions.sh script for manual host permission fixes
- Ensure appuser (uid 999) can write to mounted data and logs directories
- Fix SQLite database creation failing due to volume mount permissions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,17 @@ services:
     networks:
       - app-network
 
+  # Data directory permissions fix
+  data-permissions:
+    build: .
+    user: root
+    command: ["sh", "-c", "chown -R 999:999 /app/data /app/logs && chmod -R 755 /app/data /app/logs"]
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
+    networks:
+      - app-network
+
   # Nginx load balancer
   nginx:
     image: nginx:alpine
@@ -43,6 +54,7 @@ services:
       - ./static/memes:/app/static/memes:ro
     depends_on:
       - static-files
+      - data-permissions
     networks:
       - app-network
     restart: unless-stopped
